# Watchmen

./: .gitignore  Cargo.toml  readme.md  todo.md  tsconfig.json
app/: config.example.json
app/script/: build_and_run.bat  build_and_run.sh  comp-ts.bat  scss.bat  terminal.bat
app/scss/: core.scss
app/ts/: core.ts  index.d.ts  navbar.ts  process.ts  socket.ts
app/ts/util/: html.ts  notification.ts  popup.ts  rust.ts  time.ts
app/ts/views/: dashboard.ts  editor.ts  feed.ts  feeds.ts  filter.ts  index.ts  items.ts
app/ts/views/feed/: editor.ts  feeds.ts  filter.ts  items.ts
app/ts/views/watch/: editor.ts  items.ts
app/views/: index.hbs
backend/: Cargo.toml
backend/src/: config.rs  core.rs  error.rs  filter.rs  main.rs  state.rs  types.rs
backend/src/feature/: logging.rs  mod.rs  rpc.rs
backend/src/feature/daemon/: mod.rs  web.rs
backend/src/feature/database/: mod.rs  models.rs  objects.rs  schema.rs
backend/src/feature/frontend/: socket.rs  web.rs
backend/src/feature/telegram/: mod.rs
backend/src/feature/terminal/: core.rs
backend/src/request/: mod.rs  watcher.rs
backend/src/request/feeds/: atom.rs  mod.rs  rss.rs
backend/src/request/feeds/custom/: mod.rs
backend/src/util/: mod.rs  xpath.rs
frontend/: .gitignore  angular.json  package-lock.json  package.json
frontend/src/: index.d.ts  index.html  styles.scss
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts  background.service.ts  websocket.service.ts
frontend/src/app/changes/editor/: editor.component.html  editor.component.scss  editor.component.spec.ts  editor.component.ts
frontend/src/app/changes/list/: list.component.html  list.component.scss  list.component.ts
frontend/src/app/changes/listeners/: listeners.component.html  listeners.component.scss  listeners.component.ts
frontend/src/app/dashboard/: dashboard.component.html  dashboard.component.scss  dashboard.component.ts
frontend/src/app/feed-list/: feed-list.component.html  feed-list.component.scss  feed-list.component.ts
frontend/src/app/feeds/editor/: editor.component.html  editor.component.scss  editor.component.ts
frontend/src/app/feeds/feed-list/: feed-list.component.html  feed-list.component.scss  feed-list.component.ts
frontend/src/app/feeds/filter-edit/: filter-edit.component.html  filter-edit.component.scss  filter-edit.component.spec.ts  filter-edit.component.ts
frontend/src/app/feeds/filter-edit/filter-container/: filter-container.component.html  filter-container.component.scss  filter-container.component.spec.ts  filter-container.component.ts
frontend/src/app/feeds/websites/: websites.component.html  websites.component.scss  websites.component.ts
frontend/src/app/item/: feed-item.spec.ts  feed-item.ts  feed-listener.spec.ts  feed-listener.ts
frontend/src/app/pipes/: date-ago.ts  date-group-sectioning.ts
frontend/src/app/toolbar/: toolbar.component.html  toolbar.component.ts
src/: config.rs  core.rs  error.rs  filter.rs  lib.rs  main.rs  rpc.rs  state.rs
src/database/: mod.rs  models.rs  schema.rs
src/feature/: logging.rs  mod.rs  rpc.rs
src/feature/database/: analytics.rs  mod.rs  models.rs  objects.rs  schema.rs
src/feature/frontend/: mod.rs  socket.rs  web.rs
src/feature/telegram/: mod.rs
src/feature/terminal/: mod.rs  util.rs
src/frontend/: mod.rs  rpc.rs  socket.rs  web.rs
src/notification/: mod.rs
src/request/: atom.rs  mod.rs  rss.rs  watcher.rs
src/request/custom/: mod.rs
src/request/feeds/: atom.rs  mod.rs  rss.rs
src/request/feeds/custom/: mod.rs
