[package]
name = "feeder"
version = "0.1.0"
authors = ["Timothy <2779546+Its-its@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

url = "2.1"

# Website
actix = { version = "0.8", optional = true }
actix-web = { version = "1.0", optional = true }
actix-web-actors = { version = "1.0", optional = true }
actix-files = { version = "0.1", optional = true }
handlebars = { version = "2.0", optional = true }



rust-crypto = "0.2"
fern = "0.5"
log = "0.4"

chrono = { version="0.4", features = ["serde"] }
lazy_static = "1.4.0"

regex = "1.3.1"
reqwest = "=0.9.17"
rss = "1.8"
quick-xml = "0.17.0"
atom_syndication = { version = "0.6.0", features = ["serde"] }


diesel = { version = "1.4", features = ["sqlite", "extras"] }

# Only here for bundled feature. Using version from diesel.
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }

[features]
# default = ["libsqlite3-sys", "diesel"]
website = ["actix", "actix-web", "actix-web-actors", "actix-files", "handlebars"]